2007-12-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (EXTRA_DIST): Add ports directory.
	* Makefile.in: Regenerate.

2007-12-04  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-c1-unimplemented.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Add the above.
	* Makefile.in: Regenerate.

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
	(is_simm, is_simm16): New methods.
	* ports/hotspot/src/cpu/ppc/vm/c1_CodeStubs_ppc.cpp
	(RangeCheckStub::RangeCheckStub): Implement.
	(NewInstanceStub::NewInstanceStub): Likewise.
	(NewInstanceStub::emit_code): Re-stub.
	* ports/hotspot/src/cpu/ppc/vm/c1_Defs_ppc.hpp
	(pd_nof_cpu_regs_frame_map): Set.
	(pd_nof_fpu_regs_frame_map): Likewise.
	(pd_nof_caller_save_cpu_regs_frame_map): Likewise.
	(pd_nof_caller_save_fpu_regs_frame_map): Likewise.
	(pd_nof_cpu_regs_linearscan): Likewise.
	(pd_nof_fpu_regs_linearscan): Likewise.
	(pd_first_cpu_reg): Likewise.
	(pd_last_cpu_reg): Likewise.
	(pd_last_fpu_reg): Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FrameMap_ppc.hpp
	(gpr_opr, gpr_oop_opr, fpr_opr): New fields.
	(as_long_opr): New method.
	* ports/hotspot/src/cpu/ppc/vm/c1_FrameMap_ppc.cpp
	(FrameMap::init): Partially implement.
	(FrameMap::map_to_opr): Likewise.
	(FrameMap::validate_frame): Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRAssembler_ppc.hpp
	(emit_unimplemented): New method.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRAssembler_ppc.cpp
	(receiverOpr): Partially implement.
	(initial_frame_size_in_bytes): Implement.
	(check_icache): Re-stub.
	(emit_exception_handler): Likewise.
	(emit_deopt_handler): Likewise.
	(align_call): Implement.
	(call): Re-stub.
	(const2mem): Likewise.
	(const2reg): Likewise.
	(reg2reg): Likewise.
	(reg2mem): Likewise.
	(return_op): Likewise.
	(emit_static_call_stub): Likewise.
	(shift_op): Likewise.
	(emit_alloc_obj): Likewise.
	(peephole): Implement.
	(emit_unimplemented): New method.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRGenerator_ppc.cpp
	(load_byte_item): Implement.